# clock_3d

./: Cargo.toml  README.md
res/: clock-cube.mtl
src/: camera.rs  main.rs  model.rs  resources.rs  shader.wgsl  state.rs  texture.rs
